[package]
name = "micrio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
log = "0.4.17"
env_logger = "0.9.0"
crates-index = "0.18.10"
semver = "1.0.14"
cfg-expr = "0.10.3"
crates_io_api = "0.8.1"
reqwest = "0.11.12"
http = "0.2.8"
tokio = { version = "1.21.2", features = ["full"] }
bytes = "1.2.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
git2 = "0.15.0"
pathdiff = "0.2.1"
